--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
 <div id="main">
-    <textarea cols=150 rows=50 id="textbox" v-model="text"></textarea>
+    <textarea cols=150 rows=30 id="textbox" v-model="text"></textarea>
     <button @click="parseJson">Parse json</button>
     <button @click="stringify">Minify json</button>
     <button @click="b64encode">Base64 encode</button>
     <button @click="b64decode">Base64 decode</button> 
+    <button @click="urlEncode">URL encode</button>
+    <button @click="urlDecode">URL decode</button>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.1.3/vue.js"></script>
 <script>
@@ -32,6 +34,12 @@
 	    },
 	    b64decode: function() {
 		this.text = atob(this.text);
+	    },
+	    urlEncode: function() {
+		this.text = encodeURIComponent(this.text);
+	    },
+	    urlDecode: function() {
+		this.text = decodeURIComponent(this.text);
 	    }
         }
     })
